refactor(agent): 重构 ContentItem 类并添加 BaseSearch 接口
- 将 ContentItem 类从 model 包移动到 entity 包
- 添加新的 TextContent 类，作为 ContentItem 的子类
- 在 base 包中添加 BaseSearch 接口，用于实现搜索功能
- 更新 Agent 类中的 callLlm 方法，支持新的消息处理方式
- 修改 RegistryService 类，支持泛型的 BaseTool
- 更新 Retrieval 工具类，使用 BaseSearch 接口